--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
 
-    <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="{{{css1}}}">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{{{css2}}}">
     
   </head>
 <body>
