--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -75,8 +75,8 @@
                                 <label for="psw"><b>Password</b>
                                     <input id="password" type="password" placeholder="Enter Password" name="psw"
                                         required></label><br>
-                                <input id="login-button" style="justify-content: center; background-color: lightblue;"
-                                    type="button submit" class="target btn" onClick="parent.location='shop'" value="Login"></input><br>
+                                <button id="login-button" style="justify-content: center; background-color: lightblue;"
+                                    type="submit" class="target btn" onclick="location.href='shop'">Login</button><br>
                                 <a href="register">Haven't got an account yet?</a>
 
                             </div>
